# tabsearch

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in.txt  README.md  pyproject.toml  requirements.txt  setup.py.backup.py  test_streamlit.py
.github/workflows/: ci.yml
Examples /Similar Stock Tickers/: hv_sp500.ipynb
Examples/Similar Stock Tickers/: find_similar_tickers.py  hv_sp500_colab (1).ipynb  hv_sp500_similar_stocks.ipynb
Examples/Similar%20Stock%20Tickers/: hv_sp500_colab.ipynb
Similar Stock Tickers/Examples/: hv_sp500_colab.ipynb
hybrid_vectorizer/: __init__.py  core.py  exceptions.py
hybrid_vectorizer.egg-info/: PKG-INFO
tabsearch/: core.py  datasets.py
tests/: test_basic.py  test_core.py  test_import.py
