[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-vectorizer"
version = "0.1.2" 
description = "Unified embedding for tabular, text, and multimodal data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Hari Narayanan", email = "hari.dataprojects@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["machine-learning", "embeddings", "similarity-search", "multimodal", "vectorization"]

# Keep core deps small; make heavy ones optional
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0,<2.0.0",         # relax later if you test NumPy 2.x
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.0.0",
    "joblib>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "flake8>=3.8"]
test = ["pytest>=6.0"]
faiss = ["faiss-cpu>=1.7.0"]
gpu = ["torch>=1.9.0"]              # or point to a README note for CUDA-specific wheels

[project.urls]
Homepage = "https://github.com/hariharaprabhu/hybrid-vectorizer"
Repository = "https://github.com/hariharaprabhu/hybrid-vectorizer"
Example Notebooks = "https://github.com/hariharaprabhu/hybrid-vectorizer/Examples"
Issues = "https://github.com/hariharaprabhu/hybrid-vectorizer/issues"
Documentation = "https://github.com/hariharaprabhu/hybrid-vectorizer#readme"


[tool.setuptools]
packages = ["hybrid_vectorizer"]
include-package-data = true

[tool.setuptools.package-data]
hybrid_vectorizer = ["py.typed"]
